--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body{
+  background-color: #22254b;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+}
